# CountryMon

./: .gitignore  Attack.cpp  Attack.h  CMakeLists.txt  Card.cpp  Card.h  Collection.cpp  Collection.h  Creature.cpp  Creature.h  Energy.cpp  Energy.h  Energy_Militaire.cpp  Energy_Militaire.h  Energy_Ressource.cpp  Energy_Ressource.h  Energy_Scientifique.cpp  Energy_Scientifique.h  Energy_politique.cpp  Energy_politique.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  Init_ALLEGRO.cpp  Init_ALLEGRO.h  MaPremiereCollection.txt  MaPremièreCollection  Player.cpp  Player.h  README.md  Show.cpp  Show.h  SpeAllies.cpp  SpeAllies.h  SpeBombeAt.cpp  SpeBombeAt.h  SpeBoost.cpp  SpeBoost.h  SpeEspion.cpp  (+13 more)
ALLEGRO/: Init_ALLEGRO.cpp
Card/: Card.cpp  Card.h  Creature.cpp  Creature.h  Energy.cpp  Energy.h  Special.cpp  Special.h
CompteJoueur/: player3.txt  player4.txt
Sauvegarde/: player3.txt  player4.txt
